--- a/HulluKyla/Pages/MokkiListaPage.xaml
+++ b/HulluKyla/Pages/MokkiListaPage.xaml
@@ -50,13 +50,13 @@
         <!-- Entryt ja buttonit -->
         <ScrollView Grid.Column="1">
             <VerticalStackLayout Spacing="10">
-                <Entry x:Name="MokkiNimiEntry" Placeholder="Mökin nimi..." HeightRequest="50" />
-                <Entry x:Name="KatuosoiteEntry" Placeholder="Katuosoite..." HeightRequest="50" />
-                <Entry x:Name="PostiNroEntry" Placeholder="Postinumero..." HeightRequest="50" />
-                <Entry x:Name="HintaEntry" Placeholder="Hinta..." HeightRequest="50" />
-                <Entry x:Name="KuvausEntry" Placeholder="Kuvaus..." HeightRequest="50" />
-                <Entry x:Name="HenkiloMaaraEntry" Placeholder="Henkilömäärä..." HeightRequest="50" />
-                <Entry x:Name="VarusteluEntry" Placeholder="Varustelu..." HeightRequest="50" />
+                <Entry Style="{StaticResource ThemedEntry}" x:Name="MokkiNimiEntry" Placeholder="Mökin nimi..." HeightRequest="50" />
+                <Entry Style="{StaticResource ThemedEntry}" x:Name="KatuosoiteEntry" Placeholder="Katuosoite..." HeightRequest="50" />
+                <Entry Style="{StaticResource ThemedEntry}" x:Name="PostiNroEntry" Placeholder="Postinumero..." HeightRequest="50" />
+                <Entry Style="{StaticResource ThemedEntry}" x:Name="HintaEntry" Placeholder="Hinta..." HeightRequest="50" />
+                <Entry Style="{StaticResource ThemedEntry}" x:Name="KuvausEntry" Placeholder="Kuvaus..." HeightRequest="50" />
+                <Entry Style="{StaticResource ThemedEntry}" x:Name="HenkiloMaaraEntry" Placeholder="Henkilömäärä..." HeightRequest="50" />
+                <Entry Style="{StaticResource ThemedEntry}" x:Name="VarusteluEntry" Placeholder="Varustelu..." HeightRequest="50" />
                 <controls:ThreeDButton Text="✅ Tallenna mökki" Clicked="TallennaClicked" HeightRequest="50" />
                 <controls:ThreeDButton Text="❌ Poista mökki" Clicked="PoistaClicked" HeightRequest="50" />
             </VerticalStackLayout>
